--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "prepublishOnly": "npm run build",
     "test": "cross-env NODE_ENV=test mocha"
   },
+  "dependencies": {
+    "seedrandom": "^2.4.4"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
