--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "implausible",
+  "description": "Generate pseudorandom numbers with optional seed and choice of algorithm.",
+  "keywords": [
+    "prng",
+    "pseudorandom",
+    "seedable"
+  ],
   "version": "2.0.5",
   "license": "MIT",
   "author": "Andreas Stassivik <andreas@stassi.net> (https://github.com/Stassi)",
