--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "cross-env NODE_ENV=test mocha"
   },
   "dependencies": {
+    "ramda": "^0.26.1",
     "seedrandom": "^2.4.4"
   },
   "devDependencies": {
