--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,5 +10,8 @@
   "parserOptions": {
     "ecmaVersion": 10,
     "sourceType": "module"
+  },
+  "rules": {
+    "linebreak-style": "off"
   }
 }
