update supported platforms

--- a/package.json
+++ b/package.json
@@ -52,9 +52,17 @@
     "standard": "^14.3.1"
   },
   "engines": {
-    "node": ">=8.17.0",
-    "npm": ">=6.13.4"
+    "node": "^8 || ^10 || ^12 || ^13",
+    "npm": "^6"
   },
+  "os": [
+    "linux",
+    "osx",
+    "win32"
+  ],
+  "cpu": [
+    "x64"
+  ],
   "babel": {
     "presets": [
       [
