--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "npm run lint && mocha"
   },
   "dependencies": {
+    "neida": "^0.1.3",
     "ramda": "^0.27.0",
     "seedrandom": "^3.0.5"
   },
