--- a/package.json
+++ b/package.json
@@ -52,9 +52,17 @@
     "standard": "^14.3.1"
   },
   "engines": {
-    "node": ">=8.17.0",
-    "npm": ">=6.13.4"
+    "node": "^12.22.1 || ^14.17.1 || >=16.4.0",
+    "npm": "^6.14.13 || >=7.19.0"
   },
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
+  "cpu": [
+    "x64"
+  ],
   "babel": {
     "presets": [
       [
