homepage field added

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "uniform",
     "weighted"
   ],
+  "homepage": "https://github.com/Stassi/implausible#readme",
   "license": "MIT",
   "author": "Andreas Stassivik <andreas@stassi.net> (https://github.com/Stassi)",
   "files": [
